recursion.cons.ismember.IsMember.scala.error
Erreur de compilation :
IsMember:5: error: not found: value False
  var Test = False
             ^IsMember:10: error: not found: value True
    Test = True
           ^