recursion.cons.ismember.IsMember.scala.code


def isMember(l:List[Int], v:Int): Boolean = {
  var Test = False
  if (l== Nil) {
    return(Test)
  }
  if (v == l.head){
    Test = True
    return (Test)
  }else{ 
    isMember(l.tail, v)
  }
}